# markdown-sync-confluence

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  README_EN.md  build.py  clean.sh  config.yml  docker-compose.yml  go.mod  go.sum  main.go  md2kms.spec  pyproject.toml  run.sh
.github/workflows/: build.yml
cmd/command/: main.go
cmd/tmpconvert/: main.go
cmd/web/: main.go
cmd/web/api/: download_handler.go  upload_handler.go
pkg/ai/: format_assistant.go  format_asssistant_test.go
pkg/config/: config.go
pkg/confluence/: client.go  confluence2markdown.go  confluence2markdown_test.go  content_handler.go
pkg/markdown/: content_handler.go  converter.go  image_handler.go  markdown2confluence.go  preprocessor.go
src/markdown_to_confluence/: __init__.py  __main__.py  config.py  config.yml  confluence_client.py  content_handler.py  image_handler.py  main.py  preprocessor.py
web/: index.html
