[project]
name = "markdown-to-confluence"
version = "0.1.0"
description = "Convert Markdown files to Confluence pages"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "atlassian-python-api>=3.41.4",
    "markdown2>=2.4.12",
    "pyyaml>=6.0.1",
    "pillow>=9.5.0",
    "pyinstaller<=6.3.0"
]
requires-python = ">=3.7"

[project.scripts]
md2conf = "markdown_to_confluence.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdown_to_confluence"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye]
managed = true
dev-dependencies = []

[project.license]
text = "MIT"
